--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Naturnat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>Mit site</h1>
+  
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="Billeder/tree1.ico" alt="" width="30" height="30"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Mols Bjerge Nationalpark</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Nationalparken Thy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Rold Skov</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Vadehavet</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        
+            
+      </div>
+    </div>
+  </nav>
+
+
+  <header class="hero-section">
+    <div class="container">
+      <h1><img src="Billeder/tree1.ico" width="30" alt="">Naturnat<img src="Billeder/tree1.ico" width="" alt=""></h1>
+      <p>Naturnat – din portal til uforglemmelige naturoplevelser!</p>
+
+      <a href="#" class="btn btn-primary">Bestil naturnat</a>
+      <a href="#" class="btn btn-secondary">Kontakt os</a>
+    </div>
+  </header>
+
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
