--- a/footer-kontakt.html
+++ b/footer-kontakt.html
@@ -75,12 +75,12 @@
                     <ul class="list-unstyled">
                         <li><a href="#">Hjem</a></li>
                         <li><a href="#">+45 00000000</a></li>
-                        <li><a href="#">Adresse</a></li>
+                        <li><a href="#">Firskovsvej 18</a></li>
                     </ul>
                 </div>
                 <!-- Social Media Section -->
                 <div class="col-md-3 mb-4 mb-md-0">
-                    <span class="fw-bold">Følg også natur her</span>
+                    <span class="fw-bold">Følg også naturnat her</span>
                     <div class="social-icons mt-3">
                         <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" class="me-3">
                             <i class="bi bi-facebook"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
