--- a/weather.html
+++ b/weather.html
@@ -12,9 +12,9 @@
 <body>
 <div class="weather"> 
     <div id="weather"></div>
-    <img src="img/Skærmbillede 2025-03-24 204510.png" alt="">
-    <p><button class="btn">Knap lavet med button</button></p>
+    <button><a href="link til den side vor at vejrudsigten er"> se vejrudsigten </a></button>
 </div>
-      <script src="vejrudsigt.js"></script>
+      <script src="link til.js"></script>
 </body>
+
 </html>
